# ProjetASE

./: .gitignore  CMakeLists.txt  fermer.c  ftest.sh  medecin.c  nettoyer.c  ouvrir.c  patient.c  rapport.aux  rapport.tex  shm.c  shm.h  test-130.sh
